syntax = "proto3";

package eagle.plugin;
option java_package = "com.sms.eagle.eye.plugin.v1";
option java_multiple_files = true;
option go_package = "/plugin/v1;v1";

import "google/protobuf/empty.proto";

message RegisterResponse{
  string name = 1;
  string description = 2;
  int32 version = 3;
  repeated ConfigField fields = 4;
  repeated SelectOption options = 5;
  bool scheduleBySelf = 6;
  repeated  ConfigField alerts = 7;
}

enum FieldType{
  FIELD_UNKNOWN = 0;
  INPUT = 1;
  PASSWORD = 2;
  SQL_EDITOR = 3;
  LOG_EDITOR = 4;
  RULE_EDITOR = 5;
  RULE_SINGLE_EDITOR = 6;
  EMAIL_INPUT = 7;
  SINGLE_SELECT = 8;
}

message ConfigField{
  string key = 1;
  string labelName = 2;
  FieldType type = 3;
  string defaultValue = 4;
  bool required = 5;
  bool encrypted = 6;
  int32 order = 7;
  string option = 8;
}

message SelectOption {
  string key = 1;
  repeated SelectOptionItem items = 2;
}

message SelectOptionItem {
  string label = 1;
  int32 value = 2;
}

message AlertRule {
  string alarmLevel = 1;
  string rule = 2;
  int32 interval = 3;
}

message CreateTaskRequest{
  string id = 1;
  string name = 2;
  string description = 3;
  string config = 4;
  repeated AlertRule rules = 5;
}

message CreateTaskResponse{
  string Id = 1;
  bool triggered =2;
  string alarmMessage=3;

}

message DeleteTaskRequest{
  string mappingId=1;
  string config = 2;
}

message GeneralResponse{
  bool success=1;
  string errorMessage =2;
}

message UpdateTaskRequest{
  string mappingId = 1;
  string name = 2;
  string description = 3;
  string config = 4;
  repeated AlertRule rules = 5;
}


service PluginService{
  rpc FetchMetadata(google.protobuf.Empty) returns (RegisterResponse);
  rpc CreateOrExecute(CreateTaskRequest) returns (CreateTaskResponse);
  rpc Remove(DeleteTaskRequest) returns (GeneralResponse);
  rpc Edit(UpdateTaskRequest) returns (GeneralResponse);
}